Argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: shared-gateway-class
spec:
  controllerName: gateway.envoproxy.io/gatewayclass-controller
  description: "Shared Gateway Class for Envoy Gateway"
