Argocd/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: shared-gateway
    namespace: envoy-gateway-system

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd

    backendRefs:
    - name: argocd-server
      port: 80
